--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -10,8 +10,7 @@ html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Sections
    ========================================================================== */
@@ -19,8 +18,7 @@ html {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0;
-}
+  margin: 0; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -28,8 +26,7 @@ body {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
-}
+  margin: 0.67em 0; }
 
 /* Grouping content
    ========================================================================== */
@@ -43,8 +40,7 @@ hr {
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -54,8 +50,7 @@ pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Text-level semantics
    ========================================================================== */
@@ -63,8 +58,7 @@ pre {
  * Remove the gray background on active links in IE 10.
  */
 a {
-  background-color: transparent;
-}
+  background-color: transparent; }
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -76,16 +70,14 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder;
-}
+  font-weight: bolder; }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -97,15 +89,13 @@ samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%;
-}
+  font-size: 80%; }
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -116,16 +106,13 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 sub {
-  bottom: -0.25em;
-}
+  bottom: -0.25em; }
 
 sup {
-  top: -0.5em;
-}
+  top: -0.5em; }
 
 /* Embedded content
    ========================================================================== */
@@ -133,8 +120,7 @@ sup {
  * Remove the border on images inside links in IE 10.
  */
 img {
-  border-style: none;
-}
+  border-style: none; }
 
 /* Forms
    ========================================================================== */
@@ -154,8 +140,7 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Show the overflow in IE.
@@ -164,8 +149,7 @@ textarea {
 button,
 input {
   /* 1 */
-  overflow: visible;
-}
+  overflow: visible; }
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -174,8 +158,7 @@ input {
 button,
 select {
   /* 1 */
-  text-transform: none;
-}
+  text-transform: none; }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
@@ -184,8 +167,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button;
-}
+  -webkit-appearance: button; }
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -195,8 +177,7 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0;
-}
+  padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -205,15 +186,13 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
+  outline: 1px dotted ButtonText; }
 
 /**
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
+  padding: 0.35em 0.75em 0.625em; }
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -233,22 +212,19 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */
-}
+  /* 1 */ }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 textarea {
-  overflow: auto;
-}
+  overflow: auto; }
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -259,16 +235,14 @@ textarea {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
+  height: auto; }
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
@@ -278,15 +252,13 @@ textarea {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */
-}
+  /* 2 */ }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+  -webkit-appearance: none; }
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -296,8 +268,7 @@ textarea {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */
-}
+  /* 2 */ }
 
 /* Interactive
    ========================================================================== */
@@ -305,15 +276,13 @@ textarea {
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 details {
-  display: block;
-}
+  display: block; }
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-  display: list-item;
-}
+  display: list-item; }
 
 /* Misc
    ========================================================================== */
@@ -321,146 +290,63 @@ summary {
  * Add the correct display in IE 10+.
  */
 template {
-  display: none;
-}
+  display: none; }
 
 /**
  * Add the correct display in IE 10.
  */
 [hidden] {
-  display: none;
-}
+  display: none; }
 
 html {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
+*, *:before, *:after {
+  box-sizing: inherit; }
 
 ul {
   list-style-type: none;
-  padding: 0;
-}
+  padding: 0; }
 
 a {
   text-decoration: none;
-  color: #3a56e4;
-}
+  color: #3A56E4; }
 
 a.subtle-link {
   color: inherit;
   font-style: italic;
-  border-bottom: 1px dotted #ccc;
-}
-a.subtle-link:hover {
-  color: #3a56e4;
-}
+  border-bottom: 1px dotted #ccc; }
+  a.subtle-link:hover {
+    color: #3A56E4; }
 
 .button {
   text-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
   color: white;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px inset,
-    rgba(59, 69, 79, 0.05) 0px 1px 0px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px inset, rgba(59, 69, 79, 0.05) 0px 1px 0px;
   background: linear-gradient(#2da0fa, #3158ee) #2f7cf4;
   cursor: pointer;
   border-radius: 4px;
-  border-width: 0px;
-}
-.button:hover {
-  background: linear-gradient(#40bfff, #2f7cf4) #2da0fa;
-}
-
-.powered-by img {
-  width: 118.5px;
-  height: 14px;
-}
+  border-width: 0px; }
 
 .app-container {
-  background: #f7f7f7;
-  font-family: "Roboto", sans-serif;
-}
+  background: #ffffff;
+  font-family: "Roboto", sans-serif; }
 
-.site-background {
-  display: block;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  margin: auto;
-  background: #f7f7f7;
-  background-size: cover;
-  background-position: top;
-  background-repeat: no-repeat;
-  transform: translateY(0px);
-}
-
-.search-demo {
+.reference-ui {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  transition: transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: translateY(0px);
-}
-.search-demo.active-search {
-  transform: translateY(-175px);
-}
-.search-demo__content {
-  overflow: hidden;
-  transition-property: height;
-  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.active-search .search-demo__content {
-  overflow: auto;
-}
-.search-demo__header {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-  padding: 15vw 0 1rem 0;
-  position: relative;
-  transition-property: padding, height;
-  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.active-search .search-demo__header {
-  padding: 0px;
-}
-.search-demo__header h1 {
-  margin: 0.3em 0;
-}
-.search-demo__header h3 {
-  margin: 0.3em 0;
-}
-.search-demo__headings {
-  padding: 0;
-  transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.active-search .search-demo__headings {
-  opacity: 0;
-}
-.search-demo__icon-wrap {
+  flex-direction: column; }
+
+.reference-ui-header {
+  padding: 48px 24px;
+  background-color: #f9f9f9;
+  border-bottom: 1px solid #eeeeee; }
+  .reference-ui-header__title {
+    font-weight: 400;
+    text-align: center; }
+
+.searchbox {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80px;
-  height: 80px;
-  margin: auto auto 20px auto;
-}
-.search-demo__icon {
-  margin-left: 4px;
-  width: 80px;
-}
-.search-demo__title {
-  color: #3b454f;
-  font-weight: 100;
-  font-size: 34px;
-  margin-bottom: 0.5em;
-}
-.search-demo__input-wrapper {
-  display: flex;
-  max-width: 80vw;
   border-radius: 6px;
   border: 1px solid #dce2e9;
   background: white;
@@ -468,273 +354,193 @@ a.subtle-link:hover {
   justify-content: center;
   height: 80px;
   align-items: stretch;
-  padding: 0.5rem;
-  margin: 60px auto 0 auto;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  transition-property: margin, max-width;
-  transition: 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-.search-demo__input-wrapper.focus {
-  border: 1px solid #3a56e4;
-}
-.active-search .search-demo__input-wrapper.focus {
-  border-top-color: white;
-  border-right-color: white;
-  border-left-color: white;
-}
-.active-search .search-demo__input-wrapper {
-  border-radius: 0px;
-  border-top-color: white;
-  border-right-color: white;
-  border-left-color: white;
-  max-width: calc(100% + 0px);
-  width: 100%;
-  margin: auto;
-}
-.search-demo__text-input {
-  width: 100%;
-  border: none;
-  padding: 0 1em;
-  outline: none;
-}
-.search-demo__text-input::placeholder {
-  color: #aaaaaa;
-}
-.search-demo__submit {
-  padding: 0 2em;
-  margin-left: 10px;
-}
-.live-filtering .search-demo__submit {
-  display: none;
-}
-.search-demo__body {
-  position: absolute;
-  top: -9999px;
-  opacity: 0;
-  transition-property: transform, opacity;
-  transition: 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: translateY(100px);
-}
-.active-search .search-demo__body {
-  position: static;
-  transform: translateY(0px);
-  opacity: 1;
-}
+  padding: 0.5rem; }
+  .searchbox__text-input {
+    width: 100%;
+    border: none;
+    padding: 0 1em;
+    outline: none; }
+    .searchbox__text-input::placeholder {
+      color: #aaaaaa; }
+  .searchbox__submit {
+    padding: 0 2em;
+    margin-left: 10px; }
+    .live-filtering .searchbox__submit {
+      display: none; }
+  .searchbox.focus {
+    border: 1px solid #3A56E4; }
+
+.sorting {
+  padding-top: 32px; }
+  .sorting > select {
+    width: calc(100% - 32px); }
 
 .search-results {
   display: flex;
-  max-width: 1200px;
-  padding: 1rem 2rem 4rem 2rem;
-  margin: auto;
-}
+  padding: 0 24px; }
 
 .facets {
-  padding: 2rem 0;
-  min-width: 250px;
-}
-.facets__control + .facets__control {
-  margin-top: 30px;
-}
-.facets__title {
-  text-transform: uppercase;
-  font-size: 12px;
-  color: #8b9bad;
-  letter-spacing: 1px;
-}
-.facets__list {
-  line-height: 1.5;
-  font-size: 13px;
-}
+  padding: 48px 32px 48px 0;
+  min-width: 25vw; }
+  .facets__control + .facets__control {
+    margin-top: 30px; }
+  .facets__title {
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #8B9BAD;
+    letter-spacing: 1px; }
+  .facets__list {
+    line-height: 1.5;
+    font-size: 13px;
+    margin: 8px 0; }
 
 .facet {
   display: flex;
-  justify-content: flex-start;
-}
-.with-counts .facet:hover .facet__count {
-  opacity: 1;
-  transform: translateX(0px);
-}
-.facet__link {
-  color: #4f4f4f;
-  position: relative;
-}
-.facet__link:after {
-  content: "";
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transition: opacity 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: translate(-50%, -50%);
-  width: calc(100% + 10px);
-  height: calc(100% + 2px);
-  background: rgba(37, 139, 248, 0.08);
-  pointer-events: none;
-}
-.facet__link--active {
-  color: #3a56e4;
-}
-.facet__link:hover:after {
-  opacity: 1;
-}
-.facet__count {
-  color: #8b9bad;
-  font-size: 0.85em;
-  margin-left: 20px;
-  display: inline-block;
-  padding-top: 2px;
-  opacity: 0;
-  transform: translateX(-10px);
-  transition-property: transform, opacity;
-  transition: 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.facet__count:after {
-  content: " results";
-}
-.facet__selected {
-  font-weight: 900;
-}
-.facet__selected a {
-  font-weight: 100;
-  padding: 0 2px;
-}
-.facet__remove {
-  color: #666;
-  margin-left: 10px;
-}
+  justify-content: space-between; }
+  .facet__link {
+    color: #4f4f4f;
+    position: relative; }
+    .facet__link:after {
+      content: '';
+      opacity: 0.0;
+      position: absolute;
+      top: -1px;
+      left: -5px;
+      width: calc(100% + 10px);
+      height: calc(100% + 2px);
+      background: rgba(37, 139, 248, 0.08);
+      pointer-events: none; }
+    .facet__link--active {
+      color: #3A56E4; }
+    .facet__link:hover {
+      color: #3A56E4;
+      font-weight: 700; }
+      .facet__link:hover:after {
+        opacity: 1.0; }
+  .facet__count {
+    color: #888888;
+    font-size: 0.85em;
+    margin-left: 20px;
+    display: inline-block;
+    padding-top: 2px; }
+  .facet__selected {
+    font-weight: 900; }
+    .facet__selected a {
+      font-weight: 100;
+      padding: 0 2px; }
+  .facet__remove {
+    color: #666;
+    margin-left: 10px; }
 
 .results {
   width: 100%;
-  padding: 2rem 0;
-}
-.results__header {
+  padding: 2rem 0; }
+  .results__header {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center; }
+  .active-search .results {
+    padding: 32px 0 0 32px;
+    border-left: 1px solid #eeeeee; }
+
+.meta {
+  font-size: 12px;
+  color: #4A4B4B;
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
-}
-.results__result-count {
-  font-size: 12px;
-  color: #4a4b4b;
-}
+  width: 100%; }
 
 .result {
-  background: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
-  padding: 1.5rem 0 1rem 0;
-  font-size: 0.85em;
-  color: #828282;
-}
-.result strong {
-  color: #4f4f4f;
-}
-.result + .result {
-  margin-top: 20px;
-}
-.result em {
-  position: relative;
-  font-weight: 900;
-  font-style: inherit;
-}
-.result em:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: calc(100% + 6px);
-  height: calc(100% + 6px);
-  background: rgba(37, 139, 248, 0.08);
-  pointer-events: none;
-}
-.result__header {
-  padding: 0 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.result__title {
-  font-size: 1.2em;
-}
-.result__version {
-  font-size: 12px;
-  display: inline;
-  vertical-align: bottom;
-}
-.result__lisence {
-  font-size: 12px;
-  color: #999999;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  line-height: 1;
-  padding: 4px 4px 3px 4px;
-}
-.result__body {
-  padding: 0 2rem;
-  margin-top: 1rem;
-  line-height: 1.5;
-}
-.result__body p {
-  margin: 0;
-}
-.result__details {
-  margin-top: 0.5rem;
-  background: #fdfdfd;
-  border-radius: 4px;
-  border: 1px solid #f6f6f6;
-  padding: 0.5rem 1rem;
-}
-.result__details > li span:after {
-  content: ", ";
-}
-.result__details > li span:last-of-type:after {
-  content: "";
-}
-.result__footer {
-  padding: 0 2rem;
-  margin-top: 1rem;
-  line-height: 1;
-}
+  border-top: 1px solid #eeeeee;
+  padding: 24px 0; }
+  .result + .result {
+    margin-top: 20px; }
+  .result em {
+    position: relative;
+    color: #3A56E4;
+    font-weight: 900;
+    font-style: inherit; }
+    .result em:before {
+      content: '';
+      position: absolute;
+      top: -3px;
+      left: -3px;
+      width: calc(100% + 6px);
+      height: calc(100% + 6px);
+      background: rgba(37, 139, 248, 0.08);
+      pointer-events: none; }
+  .result__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .result__title {
+    font-size: 1.8em;
+    font-weight: 700; }
+  .result__key {
+    font-family: monospace;
+    font-weight: 400;
+    font-size: 14px;
+    flex: 0 1 40%;
+    color: #666666; }
+  .result__value {
+    font-weight: 400;
+    font-size: 14px; }
+  .result__version {
+    font-size: 12px;
+    display: inline;
+    vertical-align: bottom; }
+  .result__lisence {
+    font-size: 12px;
+    color: #999999;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    line-height: 1;
+    padding: 4px 4px 3px 4px; }
+  .result__body {
+    margin-top: 1rem;
+    line-height: 1.5; }
+    .result__body p {
+      margin: 0; }
+  .result__details > li {
+    display: flex; }
+    .result__details > li:hover {
+      background-color: #f6f6f6; }
+  .result__footer {
+    padding: 0 2rem;
+    margin-top: 1rem;
+    line-height: 1; }
 
 .rc-pagination {
   display: flex;
-  justify-content: center;
-}
-.rc-pagination a {
-  color: #3a56e4;
-}
-.rc-pagination > li {
-  border: none;
-  background: transparent;
-}
+  justify-content: center; }
+  .rc-pagination a {
+    color: #3A56E4; }
+  .rc-pagination > li {
+    border: none;
+    background: transparent; }
 
 .rc-pagination-disabled a {
-  color: #ccc;
-}
+  color: #ccc; }
 
 .rc-pagination-item-active a {
   color: #4f4f4f;
-  font-weight: 900;
-}
+  font-weight: 900; }
 
 .rc-pagination-item-active:hover {
-  cursor: not-allowed;
-}
-.rc-pagination-item-active:hover a {
-  color: #4f4f4f;
-  cursor: not-allowed;
-}
+  cursor: not-allowed; }
+  .rc-pagination-item-active:hover a {
+    color: #4f4f4f;
+    cursor: not-allowed; }
 
 .rc-pagination-jump-next:hover:after {
   content: "\BB";
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 .rc-pagination-jump-prev:hover:after {
   content: "\AB";
   font-size: 16px;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
