--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -312,13 +312,6 @@ a {
   text-decoration: none;
   color: #3A56E4; }
 
-a.subtle-link {
-  color: inherit;
-  font-style: italic;
-  border-bottom: 1px dotted #ccc; }
-  a.subtle-link:hover {
-    color: #3A56E4; }
-
 .button {
   text-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
   color: white;
@@ -327,6 +320,13 @@ a.subtle-link {
   cursor: pointer;
   border-radius: 4px;
   border-width: 0px; }
+  .button:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 1px inset, rgba(59, 69, 79, 0.3) 0px 2px 4px;
+    background: linear-gradient(#3cabff, #4063f0) #3d84f7; }
+  .button:focus {
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 1px inset, rgba(59, 69, 79, 0.3) 0px 2px 4px;
+    background: linear-gradient(#2299f5, #274eec) #2071f5; }
 
 .app-container {
   background: #ffffff;
@@ -345,10 +345,23 @@ a.subtle-link {
     font-weight: 400;
     text-align: center; }
 
+.initial-state-message {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 180px);
+  color: #888888; }
+  .active-search .initial-state-message {
+    display: none; }
+
 .searchbox {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   border-radius: 6px;
-  border: 1px solid #dce2e9;
+  border: 1px solid #abb1b7;
   background: white;
   overflow: hidden;
   justify-content: center;
@@ -370,67 +383,87 @@ a.subtle-link {
   .searchbox.focus {
     border: 1px solid #3A56E4; }
 
+.search-results {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  padding: 0 24px; }
+
+.sidebar {
+  flex: 0 1 30%; }
+
 .sorting {
   padding-top: 32px; }
   .sorting > select {
     width: calc(100% - 32px); }
 
-.search-results {
-  display: flex;
-  padding: 0 24px; }
-
 .facets {
-  padding: 48px 32px 48px 0;
-  min-width: 25vw; }
-  .facets__control + .facets__control {
-    margin-top: 30px; }
-  .facets__title {
-    text-transform: uppercase;
-    font-size: 12px;
-    color: #8B9BAD;
-    letter-spacing: 1px; }
-  .facets__list {
-    line-height: 1.5;
-    font-size: 13px;
-    margin: 8px 0; }
+  padding: 48px 32px 48px 0; }
 
-.facet {
+.facet + .facet {
+  margin-top: 30px; }
+
+.facet__title {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #8B9BAD;
+  letter-spacing: 1px; }
+
+.facet__list {
+  line-height: 1.5;
+  font-size: 13px;
+  margin: 8px 0; }
+
+.facet__item {
   display: flex;
   justify-content: space-between; }
-  .facet__link {
-    color: #4f4f4f;
-    position: relative; }
-    .facet__link:after {
-      content: '';
-      opacity: 0.0;
-      position: absolute;
-      top: -1px;
-      left: -5px;
-      width: calc(100% + 10px);
-      height: calc(100% + 2px);
-      background: rgba(37, 139, 248, 0.08);
-      pointer-events: none; }
-    .facet__link--active {
-      color: #3A56E4; }
-    .facet__link:hover {
-      color: #3A56E4;
-      font-weight: 700; }
-      .facet__link:hover:after {
-        opacity: 1.0; }
-  .facet__count {
-    color: #888888;
-    font-size: 0.85em;
-    margin-left: 20px;
-    display: inline-block;
-    padding-top: 2px; }
-  .facet__selected {
-    font-weight: 900; }
-    .facet__selected a {
-      font-weight: 100;
-      padding: 0 2px; }
-  .facet__remove {
-    color: #666;
-    margin-left: 10px; }
+
+.facet__link {
+  color: #4f4f4f;
+  position: relative; }
+  .facet__link:after {
+    content: '';
+    opacity: 0.0;
+    position: absolute;
+    top: -1px;
+    left: -5px;
+    width: calc(100% + 10px);
+    height: calc(100% + 2px);
+    background: rgba(37, 139, 248, 0.08);
+    pointer-events: none; }
+  .facet__link--active {
+    color: #3A56E4; }
+  .facet__link:hover {
+    color: #3A56E4;
+    font-weight: 700; }
+    .facet__link:hover:after {
+      opacity: 1.0; }
+
+.facet__count {
+  color: #888888;
+  font-size: 0.85em;
+  margin-left: 20px;
+  display: inline-block;
+  padding-top: 2px; }
+
+.facet__selected {
+  font-weight: 900; }
+  .facet__selected a {
+    font-weight: 100;
+    padding: 0 2px; }
+
+.facet__remove {
+  color: #666;
+  margin-left: 10px; }
+
+.meta {
+  font-size: 12px;
+  color: #4A4B4B;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; }
 
 .results {
   width: 100%;
@@ -443,14 +476,6 @@ a.subtle-link {
   .active-search .results {
     padding: 32px 0 0 32px;
     border-left: 1px solid #eeeeee; }
-
-.meta {
-  font-size: 12px;
-  color: #4A4B4B;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%; }
 
 .result {
   border-top: 1px solid #eeeeee;
@@ -482,7 +507,7 @@ a.subtle-link {
     font-family: monospace;
     font-weight: 400;
     font-size: 14px;
-    flex: 0 1 40%;
+    flex: 0 1 50%;
     color: #666666; }
   .result__value {
     font-weight: 400;
