--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -311,7 +311,7 @@ ul {
   padding: 0; }
 
 a {
-  text-decoration: none;
+  text-decoration: underline;
   color: #3a56e4; }
 
 .button {
@@ -320,8 +320,7 @@ a {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px inset, rgba(59, 69, 79, 0.05) 0px 1px 0px;
   background: linear-gradient(#2da0fa, #3158ee) #2f7cf4;
   cursor: pointer;
-  border-radius: 4px;
-  border-width: 0px; }
+  border-radius: 3px; }
   .button:hover {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 0px 1px inset, rgba(59, 69, 79, 0.3) 0px 2px 4px;
     background: linear-gradient(#3cabff, #4063f0) #3d84f7; }
@@ -340,8 +339,7 @@ a {
   flex-direction: column; }
 
 .reference-ui-header {
-  padding: 48px 24px;
-  background-color: #f9f9f9;
+  padding: 32px 24px;
   border-bottom: 1px solid #eeeeee; }
   .reference-ui-header__title {
     font-weight: 400;
@@ -362,28 +360,25 @@ a {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  border-radius: 6px;
-  border: 1px solid #abb1b7;
-  background: white;
   overflow: hidden;
   justify-content: center;
-  height: 80px;
-  align-items: stretch;
-  padding: 0.5rem; }
+  height: 50px;
+  align-items: stretch; }
   .searchbox__text-input {
     width: 100%;
-    border: none;
+    border-radius: 3px;
+    border: 1px solid #abb1b7;
     padding: 0 1em;
     outline: none; }
     .searchbox__text-input::placeholder {
       color: #aaaaaa; }
+    .searchbox__text-input.focus {
+      border: 1px solid #3a56e4; }
   .searchbox__submit {
     padding: 0 2em;
     margin-left: 10px; }
     .live-filtering .searchbox__submit {
       display: none; }
-  .searchbox.focus {
-    border: 1px solid #3a56e4; }
 
 .search-results {
   max-width: 1300px;
@@ -423,7 +418,8 @@ a {
 
 .facet__link {
   color: #4f4f4f;
-  position: relative; }
+  position: relative;
+  text-decoration: none; }
   .facet__link:after {
     content: "";
     opacity: 0;
@@ -489,7 +485,7 @@ a {
     color: #3a56e4;
     font-weight: 900;
     font-style: inherit; }
-    .result em:before {
+    .result em:after {
       content: "";
       position: absolute;
       top: -3px;
@@ -510,7 +506,11 @@ a {
     font-weight: 400;
     font-size: 14px;
     flex: 0 1 50%;
-    color: #666666; }
+    color: #777777; }
+    .result__key:before {
+      content: '"'; }
+    .result__key:after {
+      content: '": '; }
   .result__value {
     font-weight: 400;
     font-size: 14px; }
@@ -531,10 +531,13 @@ a {
     line-height: 1.5; }
     .result__body p {
       margin: 0; }
-  .result__details > li {
-    display: flex; }
-    .result__details > li:hover {
-      background-color: #f6f6f6; }
+  .result__details {
+    max-height: 300px;
+    position: relative;
+    overflow: hidden;
+    overflow-y: auto;
+    padding: 24px;
+    background-color: #f9f9f9; }
   .result__footer {
     padding: 0 2rem;
     margin-top: 1rem;
