--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -119,17 +119,24 @@ a {
   }
 }
 
-.initial-state-message {
+.initial-state-message,
+.search-error {
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 180px);
   color: $helpTextGrayColor;
+}
 
+.initial-state-message {
   .active-search & {
     display: none;
   }
+}
+
+.search-error {
+  color: red;
 }
 
 .searchbox {
