--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -393,7 +393,10 @@ a {
   padding: 0 24px; }
 
 .sidebar {
-  flex: 0 1 30%; }
+  flex: 0 1 30%;
+  padding-right: 12px; }
+  .sidebar.hidden {
+    display: none; }
 
 .sorting {
   padding-top: 32px; }
@@ -476,77 +479,79 @@ a {
     width: 100%;
     justify-content: space-between;
     align-items: center; }
-  .active-search .results {
-    padding: 32px 0 0 32px;
-    border-left: 1px solid #eeeeee; }
 
-.result {
-  border-top: 1px solid #eeeeee;
-  padding: 24px 0; }
-  .result + .result {
-    margin-top: 20px; }
-  .result em {
-    position: relative;
-    color: #3a56e4;
-    font-weight: 900;
-    font-style: inherit; }
-    .result em:after {
-      content: "";
-      position: absolute;
-      top: -3px;
-      left: -3px;
-      width: calc(100% + 6px);
-      height: calc(100% + 6px);
-      background: rgba(37, 139, 248, 0.08);
-      pointer-events: none; }
-  .result__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-  .result__title {
-    font-size: 1.8em;
-    font-weight: 700; }
-  .result__key {
-    font-family: monospace;
-    font-weight: 400;
-    font-size: 14px;
-    flex: 0 1 50%;
-    color: #777777; }
-    .result__key:before {
-      content: '"'; }
-    .result__key:after {
-      content: '": '; }
-  .result__value {
-    font-weight: 400;
-    font-size: 14px; }
-  .result__version {
-    font-size: 12px;
-    display: inline;
-    vertical-align: bottom; }
-  .result__lisence {
-    font-size: 12px;
-    color: #999999;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    line-height: 1;
-    padding: 4px 4px 3px 4px; }
-  .result__body {
-    margin-top: 1rem;
-    line-height: 1.5; }
-    .result__body p {
-      margin: 0; }
-  .result__details {
-    max-height: 300px;
-    position: relative;
-    overflow: hidden;
-    overflow-y: auto;
-    padding: 24px;
-    background-color: #f9f9f9; }
-  .result__footer {
-    padding: 0 2rem;
-    margin-top: 1rem;
-    line-height: 1; }
+.result em {
+  position: relative;
+  color: #3a56e4;
+  font-weight: 900;
+  font-style: inherit; }
+  .result em:after {
+    content: "";
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    background: rgba(37, 139, 248, 0.08);
+    pointer-events: none; }
+
+.result__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.result__title {
+  font-size: 1.8em;
+  font-weight: 700;
+  margin-top: 24px; }
+
+.result__key {
+  font-family: monospace;
+  font-weight: 400;
+  font-size: 14px;
+  flex: 0 1 50%;
+  color: #777777; }
+  .result__key:before {
+    content: '"'; }
+  .result__key:after {
+    content: '": '; }
+
+.result__value {
+  font-weight: 400;
+  font-size: 14px; }
+
+.result__version {
+  font-size: 12px;
+  display: inline;
+  vertical-align: bottom; }
+
+.result__lisence {
+  font-size: 12px;
+  color: #999999;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  line-height: 1;
+  padding: 4px 4px 3px 4px; }
+
+.result__body {
+  margin-top: 1rem;
+  line-height: 1.5; }
+  .result__body p {
+    margin: 0; }
+
+.result__details {
+  max-height: 300px;
+  position: relative;
+  overflow: hidden;
+  overflow-y: auto;
+  padding: 24px;
+  background-color: #f9f9f9; }
+
+.result__footer {
+  padding: 0 2rem;
+  margin-top: 1rem;
+  line-height: 1; }
 
 .rc-pagination {
   display: flex;
