--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -198,6 +198,9 @@ a {
     overflow: visible;
     position: absolute;
     width: calc(100% - 3em);
+    left: 0;
+    right: 0;
+    z-index: 1;
 
     .searchbox__text-input {
       border-bottom: none;
